--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
+    "tailwind:css": "tailwind build src/tailwind.css -c tailwind.config.js -o src/index.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
