--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "tailwind:css": "tailwind build src/tailwind.css -c tailwind.config.js -o src/index.css",
     "start": "yarn tailwind:css && react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn tailwind:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
