--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
     "@storybook/addon-links": "^5.3.13",
     "@storybook/addons": "^5.3.13",
     "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.13"
-  },
-  "devDependencies": {
+    "@storybook/react": "^5.3.13",
     "tailwindcss": "^1.2.0"
   }
 }
