--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "tailwind:css": "tailwind build src/tailwind.css -c tailwind.config.js -o src/index.css",
-    "start": "yarn tailwind:css && react-scripts start",
-    "build": "yarn tailwind:css && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
