--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "classnames": "^2.2.6",
-    "metamask-login-front-logic": "^1.0.1",
+    "metamask-login-front-logic": "1.0.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
