--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.7",
     "classnames": "^2.2.6",
     "metamask-login-front-logic": "1.0.15",
     "react": "^16.12.0",
