--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.9",
     "@types/d3": "^5.7.2",
+    "@types/d3-array": "^2.0.0",
+    "@types/d3-scale": "^2.2.0",
     "@types/d3-selection": "^1.4.1",
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.0",
@@ -16,6 +18,8 @@
     "@types/react-redux": "^7.1.7",
     "classnames": "^2.2.6",
     "d3": "^5.15.0",
+    "d3-array": "^2.4.0",
+    "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
     "metamask-login-front-logic": "1.0.15",
     "react": "^16.12.0",
