--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/classnames": "^2.2.9",
     "@types/d3": "^5.7.2",
     "@types/d3-array": "^2.0.0",
+    "@types/d3-axis": "^1.0.12",
     "@types/d3-scale": "^2.2.0",
     "@types/d3-selection": "^1.4.1",
     "@types/jest": "^24.0.0",
@@ -19,6 +20,7 @@
     "classnames": "^2.2.6",
     "d3": "^5.15.0",
     "d3-array": "^2.4.0",
+    "d3-axis": "^1.0.12",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
     "metamask-login-front-logic": "1.0.15",
