--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
