--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/react-redux": "^7.1.7",
     "classnames": "^2.2.6",
     "d3": "^5.15.0",
@@ -28,6 +29,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-loader-spinner": "^3.1.5",
     "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
