--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^5.0.15",
     "@types/react-loader-spinner": "^3.1.0",
     "@types/react-redux": "^7.1.7",
     "classnames": "^2.2.6",
